--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -6,6 +6,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: flex;
     justify-content: top;
+    flex-wrap: wrap;
     background: #fff;
     max-width: 1024px;
     width: 90%;
@@ -15,8 +16,8 @@
 
 .message-container {
   background: #fff;
-  width: 70%;
-  margin: 25px auto 50px;
+  width: 60%;
+  margin: 50px auto;
 }
 
 .container-title {
@@ -31,7 +32,7 @@
 
 
 .message {
-  width: 80%;
+  width: 90%;
   margin: 0px auto;
   -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -64,6 +65,7 @@
       box-sizing: border-box;
       height: 150px;
       vertical-align: top;
+      border-color: $accent;
     }
   }
 }
