--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,48 +11,47 @@
 </head>
 
 <body id="login-page">
-<section>
+  <section>
     <div class="login-shape"></div>
 
     <div class="login-input">
-        <div class="login-header">
-            <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}"
-                 alt="teacher talk logo"/>
-            <div class="tagline clearfix">
-                <h1>Teacher Talk</h1>
-                <h3>Empowering <span class="bold">Education</span> Through Better <span
-                        class="bold">Communication</span>.</h3>
-            </div>
+      <div class="login-header">
+        <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}"
+             alt="teacher talk logo"/>
+        <div class="tagline clearfix">
+            <h1>Teacher Talk</h1>
+            <h3>Empowering <span class="bold">Education</span> Through Better <span
+                      class="bold">Communication</span>.</h3>
+          </div>
         </div>
         <form action="login.html" th:action="@{/login}" method="post">
-            <fieldset>
-                <!-- <legend>Login</legend> -->
+          <fieldset>
+            <!-- <legend>Login</legend> -->
 
-                <div class="input-wrapper">
-                    <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}"/>
-                    <label for="loginEmail" class="loginEmail">Email</label>
-                </div>
-                <div class="input-wrapper">
-                    <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
-                    <label for="loginPassword" class="loginPassword">Password </label>
-                </div>
+            <div class="input-wrapper">
+                <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}"/>
+                <label for="loginEmail" class="loginEmail">Email</label>
+            </div>
+            <div class="input-wrapper">
+                <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
+                <label for="loginPassword" class="loginPassword">Password </label>
+            </div>
 
-                <label for="rememberMe" class="rememberMe">
-                    <input type="checkbox" id="rememberMe" name="rememberMe" value="rememberMe"
-                           th:checked="${rememberMe}"/>
-                    Remember me?
-                </label>
+            <label for="rememberMe" class="rememberMe">
+                <input type="checkbox" id="rememberMe" name="rememberMe" value="rememberMe"
+                       th:checked="${rememberMe}"/>
+                Remember me?
+            </label>
 
-            </fieldset>
+          </fieldset>
 
 
-            <!--Changed <p> to <a> so might need renaming in CSS-->
-            <a class="forgot-password" href="forgotPasswordForm.html" th:href="@{/forgotPassword}">Forgot Password?</a>
-            <button type="submit" class="send">Login</button>
-            <!-- <button type="submit"><a href="teacherSignUp.html" th:href="@{/teacherSignUp}">Sign-Up</a></button> -->
+          <a class="forgot-password" href="forgotPasswordForm.html" th:href="@{/forgotPassword}">Forgot Password?</a>
+          <button type="submit" class="send">Login</button>
         </form>
+
         <button id="openModal" class="update">Sign Up</button>
-        <div th:if="${hasError}">Invalid Login. Please Try Again</div>
+        <div class="login-error" th:if="${hasError}">Invalid Login. Please Try Again</div>
 
 
 
