--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -126,7 +126,7 @@
 
             <!-- 3rd Student -->
             <div class="border-seperation"></div>
-            <div class="addContact">Add Another Student <span class="plus">+</span></div>
+            <div class="addContact thirdStudent">Add Another Student <span class="plus">+</span></div>
             <div class="contactInfo">
               <div class="input-wrapper">
                 <input type="text" id="" name="" th:value="${parent.getPrimaryFirstName()}" />
