--- a/src/main/resources/static/css/easy-autocomplete.css
+++ b/src/main/resources/static/css/easy-autocomplete.css
@@ -1,16 +1,17 @@
 /*
  * easy-autocomplete
  * jQuery plugin for autocompletion
- * 
+ *
  * @author Łukasz Pawełczak (http://github.com/pawelczak)
  * @version 1.3.5
- * Copyright  License: 
+ * Copyright  License:
  */
+
 
 .easy-autocomplete {
   position: relative;
 }
-.easy-autocomplete input {
+/*.easy-autocomplete input {
   border-color: #ccc;
   border-radius: 4px;
   border-style: solid;
@@ -22,14 +23,14 @@
 }
 .easy-autocomplete input:hover, .easy-autocomplete input:focus {
   box-shadow: none;
-}
+}*/
 .easy-autocomplete a {
   display: block;
 }
-.easy-autocomplete.eac-blue-light input:hover, .easy-autocomplete.eac-blue-light input:focus {
+/*.easy-autocomplete.eac-blue-light input:hover, .easy-autocomplete.eac-blue-light input:focus {
   border-color: #66afe9;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
-}
+}*/
 .easy-autocomplete.eac-blue-light ul {
   border-color: #66afe9;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
@@ -40,10 +41,10 @@
 .easy-autocomplete.eac-blue-light ul li.selected, .easy-autocomplete.eac-blue-light ul .eac-category.selected {
   background-color: #ecf5fc;
 }
-.easy-autocomplete.eac-green-light input:hover, .easy-autocomplete.eac-green-light input:focus {
+/*.easy-autocomplete.eac-green-light input:hover, .easy-autocomplete.eac-green-light input:focus {
   border-color: #41DB00;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(146, 237, 107, 0.6);
-}
+}*/
 .easy-autocomplete.eac-green-light ul {
   border-color: #41DB00;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(146, 237, 107, 0.6);
@@ -54,10 +55,10 @@
 .easy-autocomplete.eac-green-light ul li.selected, .easy-autocomplete.eac-green-light ul .eac-category.selected {
   background-color: #9eff75;
 }
-.easy-autocomplete.eac-red-light input:hover, .easy-autocomplete.eac-red-light input:focus {
+/*.easy-autocomplete.eac-red-light input:hover, .easy-autocomplete.eac-red-light input:focus {
   border-color: #ff5b5b;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 90, 90, 0.6);
-}
+}*/
 .easy-autocomplete.eac-red-light ul {
   border-color: #ff5b5b;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 90, 90, 0.6);
@@ -68,10 +69,10 @@
 .easy-autocomplete.eac-red-light ul li.selected, .easy-autocomplete.eac-red-light ul .eac-category.selected {
   background-color: #ff8e8e;
 }
-.easy-autocomplete.eac-yellow-light input:hover, .easy-autocomplete.eac-yellow-light input:focus {
+/*.easy-autocomplete.eac-yellow-light input:hover, .easy-autocomplete.eac-yellow-light input:focus {
   border-color: #ffdb00;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 231, 84, 0.6);
-}
+}*/
 .easy-autocomplete.eac-yellow-light ul {
   border-color: #ffdb00;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 231, 84, 0.6);
@@ -82,10 +83,10 @@
 .easy-autocomplete.eac-yellow-light ul li.selected, .easy-autocomplete.eac-yellow-light ul .eac-category.selected {
   background-color: #ffe233;
 }
-.easy-autocomplete.eac-dark-light input:hover, .easy-autocomplete.eac-dark-light input:focus {
+/*.easy-autocomplete.eac-dark-light input:hover, .easy-autocomplete.eac-dark-light input:focus {
   border-color: #333;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(55, 55, 55, 0.6);
-}
+}*/
 .easy-autocomplete.eac-dark-light ul {
   border-color: #333;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(55, 55, 55, 0.6);
@@ -100,7 +101,7 @@
 .easy-autocomplete.eac-dark {
   color: #fff;
 }
-.easy-autocomplete.eac-dark input {
+/*.easy-autocomplete.eac-dark input {
   background-color: #404040;
   border-radius: 4px;
   box-shadow: 0;
@@ -109,7 +110,7 @@
 .easy-autocomplete.eac-dark input:hover, .easy-autocomplete.eac-dark input:focus {
   border-color: #333;
   box-shadow: 0;
-}
+}*/
 .easy-autocomplete.eac-dark ul {
   border-color: #333;
 }
@@ -124,16 +125,16 @@
 .easy-autocomplete.eac-dark-glass {
   color: #fff;
 }
-.easy-autocomplete.eac-dark-glass input {
+/*.easy-autocomplete.eac-dark-glass input {
   background-color: rgba(0, 0, 0, 0.8);
   border-radius: 4px;
   box-shadow: 0;
   color: #f6f6f6;
-}
-.easy-autocomplete.eac-dark-glass input:hover, .easy-autocomplete.eac-dark-glass input:focus {
+}*/
+/*.easy-autocomplete.eac-dark-glass input:hover, .easy-autocomplete.eac-dark-glass input:focus {
   border-color: rgba(0, 0, 0, 0.8);
   box-shadow: 0;
-}
+}*/
 .easy-autocomplete.eac-dark-glass ul {
   border-color: rgba(0, 0, 0, 0.8);
 }
@@ -151,13 +152,13 @@
 .easy-autocomplete.eac-blue {
   color: #fff;
 }
-.easy-autocomplete.eac-blue input {
+/*.easy-autocomplete.eac-blue input {
   background-color: #6d9ed1;
   border-radius: 4px;
   box-shadow: 0;
   color: #f6f6f6;
-}
-.easy-autocomplete.eac-blue input::-webkit-input-placeholder {
+}*/
+/*.easy-autocomplete.eac-blue input::-webkit-input-placeholder {
   color: #f6f6f6;
 }
 .easy-autocomplete.eac-blue input:-moz-placeholder {
@@ -172,7 +173,7 @@
 .easy-autocomplete.eac-blue input:hover, .easy-autocomplete.eac-blue input:focus {
   border-color: #5A91CB;
   box-shadow: 0;
-}
+}*/
 .easy-autocomplete.eac-blue ul {
   border-color: #5A91CB;
 }
@@ -187,17 +188,17 @@
 .easy-autocomplete.eac-yellow {
   color: #333;
 }
-.easy-autocomplete.eac-yellow input {
+/*.easy-autocomplete.eac-yellow input {
   background-color: #ffdb7e;
   border-color: #333;
   border-radius: 4px;
   box-shadow: 0;
   color: #333;
-}
-.easy-autocomplete.eac-yellow input:hover, .easy-autocomplete.eac-yellow input:focus {
+}*/
+/*.easy-autocomplete.eac-yellow input:hover, .easy-autocomplete.eac-yellow input:focus {
   border-color: #333;
   box-shadow: 0;
-}
+}*/
 .easy-autocomplete.eac-yellow ul {
   border-color: #333;
 }
@@ -212,7 +213,7 @@
 .easy-autocomplete.eac-purple {
   color: #333;
 }
-.easy-autocomplete.eac-purple input {
+/*.easy-autocomplete.eac-purple input {
   background-color: #d6d1e7;
   border-color: #b8afd5;
   box-shadow: 0;
@@ -221,7 +222,7 @@
 .easy-autocomplete.eac-purple input:hover, .easy-autocomplete.eac-purple input:focus {
   border-color: #333;
   box-shadow: 0;
-}
+}*/
 .easy-autocomplete.eac-purple ul {
   border-color: #333;
 }
@@ -233,14 +234,14 @@
   background-color: #ebe8f3;
   color: #333;
 }
-.easy-autocomplete.eac-bootstrap input {
+/*.easy-autocomplete.eac-bootstrap input {
   border-color: #ccc;
   border-radius: 4px;
   border-style: solid;
   border-width: 1px;
   color: #555;
   padding: 6px 12px;
-}
+}*/
 
 .easy-autocomplete-container {
   left: 0;
@@ -318,3 +319,31 @@
 }
 
 /*# sourceMappingURL=easy-autocomplete.css.map */
+
+/*Code Added from SignUpPage.scss*/
+.input-wrapper {
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+}
+
+.input-wrapper label {
+  position:absolute;
+  top: 10px;
+  left:15px;
+  z-index: 5;
+  margin: 10px;
+  padding: 0 2px;
+  font-size: .8rem;
+  font-weight: 500;
+  background: #fff;
+  pointer-events: none;
+  transition:transform 100ms ease;
+  transform:translateY(-10px);
+}
+
+.input-wrapper input {
+  font-size: .8rem;
+  border:1px solid $accent;
+  padding: 10px;
+}
