--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -18,6 +18,7 @@
   background: #fff;
   width: 60%;
   margin: 50px auto;
+  position: relative;
 }
 
 .container-title {
@@ -29,7 +30,20 @@
   margin-bottom: 15px;
 }
 
-
+#startTour{
+  position: absolute;
+  right: 0px;
+  top: -60px;
+  min-width: 100px;
+  background: $primary;
+  -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  transition: background 1s;
+}
+#startTour:hover {
+  background:  #53b98f;
+}
 
 .message {
   width: 90%;
@@ -70,38 +84,63 @@
   }
 }
 
+//////////////////////
+// Hopscotch Styles///
+/////////////////////
 
-// Message Box Shadow Effect
+div.hopscotch-bubble .hopscotch-bubble-close {
+    display:none;
+}
 
-.shadow-effect
-{
-    position:relative;
-    -webkit-box-shadow:0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-       -moz-box-shadow:0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-            box-shadow:0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+div.hopscotch-bubble, {
+  background: $header;
+  border-color: $header;
+  font-family: 'Signika', sans-serif;
+
+  .hopscotch-bubble-number {
+    color: #333;
+    font-size: 1.5rem;
+  }
+
+  h3, .hopscotch-content{
+    font-family: 'Signika', sans-serif;
+    color: #333;
+  }
+
+  .hopscotch-bubble-container {
+    padding: 8px !important;
+  }
 }
-.shadow-effect:before, .shadow-effect:after
-{
-    content:"";
-    position:absolute;
-    z-index:-1;
-    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
-    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
-    box-shadow:0 0 20px rgba(0,0,0,0.8);
-    top:50%;
-    bottom:0;
-    left:10px;
-    right:10px;
-    -moz-border-radius:100px / 10px;
-    border-radius:100px / 10px;
+
+// Yellow arrow
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.left .hopscotch-bubble-arrow-border {
+  border-right: 17px solid $header;
 }
-.shadow-effect:after
-{
-    right:10px;
-    left:auto;
-    -webkit-transform:skew(8deg) rotate(3deg);
-       -moz-transform:skew(8deg) rotate(3deg);
-        -ms-transform:skew(8deg) rotate(3deg);
-         -o-transform:skew(8deg) rotate(3deg);
-            transform:skew(8deg) rotate(3deg);
+
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-arrow-border{
+  border-top: 17px solid $header;
+}
+
+// Yellow background on arrow
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.left .hopscotch-bubble-arrow {
+  border-right: 17px solid $header;
+}
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-arrow {
+  border-top: 17px solid $header;
+}
+
+// Next
+div.hopscotch-bubble .hopscotch-nav-button.next:hover {
+  background-color: #53b98f;
+}
+
+
+div.hopscotch-bubble .hopscotch-nav-button.next {
+  min-width: 100px;
+  margin: 5px auto;
+  border-color: $primary;
+  color: #fff;
+  font-size: 1rem;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
+  background-color: $primary;
 }
