--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,6 +42,10 @@ nav ul li {
   text-align: center;
   padding-bottom: 15px; }
 
+.history {
+  position: relative;
+  z-index: 100; }
+
 #teacherSendMessage section {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -57,7 +61,8 @@ nav ul li {
 .message-container {
   background: #fff;
   width: 60%;
-  margin: 50px auto; }
+  margin: 50px auto;
+  position: relative; }
 
 .container-title {
   border-top: 10px solid #00b074;
@@ -66,6 +71,20 @@ nav ul li {
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 15px; }
+
+#startTour {
+  position: absolute;
+  right: 0px;
+  top: -60px;
+  min-width: 100px;
+  background: #00b074;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  transition: background 1s; }
+
+#startTour:hover {
+  background: #53b98f; }
 
 .message {
   width: 90%;
@@ -95,34 +114,45 @@ nav ul li {
       vertical-align: top;
       border-color: #ececec; }
 
-.shadow-effect {
-  position: relative;
-  -webkit-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  -moz-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset; }
+div.hopscotch-bubble .hopscotch-bubble-close {
+  display: none; }
 
-.shadow-effect:before, .shadow-effect:after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-  top: 50%;
-  bottom: 0;
-  left: 10px;
-  right: 10px;
-  -moz-border-radius: 100px / 10px;
-  border-radius: 100px / 10px; }
+div.hopscotch-bubble {
+  background: #faf0a1;
+  border-color: #faf0a1;
+  font-family: 'Signika', sans-serif; }
+  div.hopscotch-bubble .hopscotch-bubble-number {
+    color: #333;
+    font-size: 1.5rem; }
+  div.hopscotch-bubble h3, div.hopscotch-bubble .hopscotch-content {
+    font-family: 'Signika', sans-serif;
+    color: #333; }
+  div.hopscotch-bubble .hopscotch-bubble-container {
+    padding: 8px !important; }
 
-.shadow-effect:after {
-  right: 10px;
-  left: auto;
-  -webkit-transform: skew(8deg) rotate(3deg);
-  -moz-transform: skew(8deg) rotate(3deg);
-  -ms-transform: skew(8deg) rotate(3deg);
-  -o-transform: skew(8deg) rotate(3deg);
-  transform: skew(8deg) rotate(3deg); }
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.left .hopscotch-bubble-arrow-border {
+  border-right: 17px solid #faf0a1; }
+
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-arrow-border {
+  border-top: 17px solid #faf0a1; }
+
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.left .hopscotch-bubble-arrow {
+  border-right: 17px solid #faf0a1; }
+
+div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-arrow {
+  border-top: 17px solid #faf0a1; }
+
+div.hopscotch-bubble .hopscotch-nav-button.next:hover {
+  background-color: #53b98f; }
+
+div.hopscotch-bubble .hopscotch-nav-button.next {
+  min-width: 100px;
+  margin: 5px auto;
+  border-color: #00b074;
+  color: #fff;
+  font-size: 1rem;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
+  background-color: #00b074; }
 
 #login-page section {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
