--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -8,6 +8,7 @@
   <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}" href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
   <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
   <link rel="stylesheet" th:href="@{/css/easy-autocomplete.css}" href="../static/css/easy-autocomplete.css" />
+  <link rel="stylesheet" th:href="@{/css/hopscotch.css}" href="../static/css/hopscotch.css" />
   <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 
 </head>
@@ -29,7 +30,7 @@
           <li><a href="#">Add Student</a></li>
           <li><a href="#">Add Template</a></li>
 
-          <li><a href="#" th:href="@{/messageLog}">History Log</a></li>
+          <li class="history"><a href="#" th:href="@{/messageLog}">History Log</a></li>
 
           <li class="profile"><a href="#updateProfile">Profile</a></li>
           <div id="updateProfile">
@@ -69,24 +70,10 @@
           </div>
         </ul>
       </nav>
-
-      <!-- <nav class="mobile">
-        <a href="login.html">
-          <img class="logo" src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}"
-             alt="teacher talk logo"/>
-        </a>
-        <div class="hamburger">&#9776;</div>
-          <ul class="hamburger-menu">
-            <li><a href="#">Add Student</a></li>
-            <li><a href="#">Add Template</a></li>
-            <li><a href="#" th:href="@{/messageLog}">History Log</a></li>
-            <li><a href="#">Profile</a></li>
-        </ul>
-      </nav> -->
-
     </header>
 
     <div class="message-container">
+      <button id="startTour">Start Tour</button>
       <div class="message">
         <div class="container-title">New Message</div>
 
@@ -119,7 +106,6 @@
             </form>
         </div>
     </div>
-    <button id="startTour">Start Tour</button>
 </section>
 
 <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
