--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -10,6 +10,7 @@ $accent:#ececec; //off white for background
 @import "partials/login";
 @import "partials/loginModal";
 @import "partials/signUpPage";
+@import "partials/history";
 
 * {
   margin:0;
