--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -29,8 +29,7 @@
         <ul class="menu">
           <li><a href="#">Add Student</a></li>
           <li><a href="#">Add Template</a></li>
-
-          <li class="history"><a href="#" th:href="@{/messageLog}">History Log</a></li>
+          <li class="history"><a href="messageLog.html" th:href="@{/messageLog}">History Log</a></li>
 
           <li class="profile"><a href="#updateProfile">Profile</a></li>
           <div id="updateProfile">
