Fixed glitch in menu responsivness

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -88,7 +88,7 @@
 
           <legend>Student Registration</legend>
           <div class="input-wrapper">
-            <input type="text" id="" name="" th:value="${parent.getPrimaryFirstName()}" required="required"/>
+            <input type="text" id="" name="" th:value="" required="required"/>
             <label for="">First Name* </label>
           </div>
           <div class="input-wrapper">
