--- a/src/main/resources/static/css/partials/_media.scss
+++ b/src/main/resources/static/css/partials/_media.scss
@@ -1,3 +1,9 @@
+@media (min-width: 768px) {
+  .menu {
+    display: block !important;
+  }
+}
+
 @media (max-width:767px) {
 
 // Teacher Message Navigation
@@ -10,9 +16,11 @@
   .mobile-toggle {
     display: block;
   }
+
   .menu {
     display: none;
   }
+
   nav {
     ul {
       text-align: center;
@@ -28,7 +36,6 @@
   }
 
   // Teacher Page Message
-
   .message-container {
     width: 100%;
   }
