--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -391,7 +391,7 @@ aside {
 table {
   border-collapse: collapse;
   border: 1px solid #ececec;
-  width: 60%;
+  width: 80%;
   margin: 25px auto;
   line-height: 1.5;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -495,6 +495,9 @@ legend {
   clear: both;
   display: block; }
 
+@media (min-width: 768px) {
+  .menu {
+    display: block !important; } }
 @media (max-width: 767px) {
   header {
     width: 100%;
