fixed Forms in teacher.html to not overlap with user input and added content in signup.js

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,11 +30,11 @@
 
             <div class="input-wrapper">
                 <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}"/>
-                <label for="loginEmail" class="loginEmail">Email</label>
+                <label id="emailValue" for="loginEmail" class="loginEmail">Email</label>
             </div>
             <div class="input-wrapper">
                 <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
-                <label for="loginPassword" class="loginPassword">Password </label>
+                <label id="passwordValue" for="loginPassword" class="loginPassword">Password </label>
             </div>
 
             <label for="rememberMe" class="rememberMe">
