--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,7 +33,7 @@ nav ul li {
     -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1); }
-  nav ul li a:hover, nav ul li a:focus, nav ul li a:active {
+  nav ul li a:hover, nav ul li a:focus {
     background: #fff; }
 
 #updateProfile, #addStudent {
@@ -41,6 +41,8 @@ nav ul li {
   background: #fff;
   text-align: center;
   padding-bottom: 15px; }
+  #updateProfile legend, #addStudent legend {
+    margin: 10px auto; }
 
 .history {
   position: relative;
