commiting to pull changes

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -31,12 +31,12 @@
 
           <li class="student"><a href="#">Add Student</a></li>
           <div id="addStudent">
-            <form action="" th:action="">
+            <form action="#">
               <fieldset>
 
                 <legend>Student Registration</legend>
                 <div class="input-wrapper">
-                  <input type="text" id="registerFirstNam" name="" th:value=""/>
+                  <input type="text" id="registerFirstName" name="" th:value=""/>
                   <label id="" for="">First Name </label>
                 </div>
                 <div class="input-wrapper">
