fixed bug with add student on teacher page

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -36,30 +36,30 @@
 
                 <legend>Student Contact</legend>
                 <div class="input-wrapper">
-                  <input type="text" id="registerFirstName" name="" th:value=""/>
-                  <label id="" for="">First Name </label>
+                  <input type="text" id="registerFirstNameStudent" name="studentFirstName"/>
+                  <label for="registerFirstNameStudent"> Student First Name </label>
                 </div>
                 <div class="input-wrapper">
-                  <input type="text" id="" name="" th:value=""/>
-                  <label id="" for="">Last Name </label>
+                  <input type="text" id="registerLastNameStudent" name="studentLastName"/>
+                  <label for="registerLastNameStudent">Student Last Name </label>
                 </div>
 
                 <legend>Parent Contact</legend>
                 <div class="input-wrapper">
-                  <input type="text" id="registerFirstNam" name="" th:value=""/>
-                  <label id="" for="">First Name </label>
+                  <input type="text" id="registerFirstNameParent" name="parentFirstName" />
+                  <label for="registerFirstNameParent">Parent First Name </label>
                 </div>
                 <div class="input-wrapper">
-                  <input type="text" id="" name="" th:value=""/>
-                  <label id="" for="">Last Name </label>
+                  <input type="text" id="registerLastNameParent" name="parentLastName"/>
+                  <label for="registerLastNameParent">Parent Last Name </label>
                 </div>
                 <div class="input-wrapper">
-                  <input type="" id="" name="" th:value=""/>
-                  <label id="" for="">Email </label>
+                  <input type="email" id="registerParentEmail" name="parentEmail"/>
+                  <label for="registerParentEmail">Parent Email </label>
                 </div>
 
               </fieldset>
-              <button type="submit" class="update">Update</button>
+              <button type="submit" class="update">Save</button>
             </form>
           </div>
 
